# context-studio

./: .dockerignore  .gitignore  Dockerfile  GOVERNANCE.md  MARKETING_CONTEXT_GUIDE.md  Marketing_Context.md  NEXT_SPRINT.md  PLAN.md  README.md  _schema.yaml  _scopes.yaml  config.json  pyproject.toml  render.yaml  run.py
archive/: 2026-06-21-curated-context-plus-searchable-collections.md  2026-06-21-next-sprint-user-permissions.md  2026-06-22-okf-and-mcp-agent-retrieval-alignment.md
brand/: _schema.yaml  terminology.md
cms/: astro.config.mjs  package-lock.json  package.json
context_repo/: _schema.yaml  _scopes.yaml  ad-targeting.md  chat.md  chorus.md  cloud-partners.md  contact-company-search.md  copilot.md  crm-enrichment.md  data-as-a-service.md  data-services.md  data.md  enterprise.md  form-optimization.md  global-coverage.md  gtm-context-graph.md  gtm-studio.md  gtm-workspace.md  ideal-customer.md  identify-website-visitors.md  index.md  intent-data.md  labs.md  lead-generation.md  market.zoominfo.com.md  marketing.md  operations.md  platform.md  recruiting.md  sales.md  salesloft.md  workflow-tools.md  zoominfo-mcp.md
context_system/: __init__.py  api_models.py  app.py  audit.py  auth.py  cli.py  cms.py  collections.py  config.py  demo_workspace.py  git_store.py  importer.py  mcp_server.py  mcp_tools.py  models.py  okf.py  repository.py  request_context.py  schema_store.py  scope_store.py  service.py
docs/: deploy-to-render.md  getting-started.md
proof/: _schema.yaml  customer-evidence.md
tests/: test_cms_layout.py  test_competitor_scoping.py  (+6 more)
(+1217 files in other folders)
