[project]
name = "content-system-prototype-codex"
version = "0.1.0"
description = "Standalone marketing context service prototype"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "httpx",
    "mcp>=1.27,<2",
    "pydantic>=2.6",
    "pytest",
    "pyyaml",
    "uvicorn"
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["context_system"]
