[project]
name = "context-studio"
version = "0.1.0"
description = "Governed marketing context studio"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "httpx",
    "mcp>=1.27,<2",
    "markitdown",
    "pydantic>=2.6",
    "pytest",
    "pyyaml",
    "uvicorn"
]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["context_system"]
